--- a/Readme
+++ b/Readme
@@ -1,10 +1,10 @@
-CheGra
+#**CheGra**
 
-Application for searching Hamiltonian path and cycle.
+*Application for searching Hamiltonian path and cycle.
 Implemented by backtracking, Warnsdorffs algorithm and neural network based on Hopfield's architecture
 
 Radim Krátký
 Diploma thesis
 2020
 FIM
-Univerzita Hradec Králové 
+Univerzita Hradec Králové *
